# auto-chat-maker

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  Makefile  NETLIFY_SETUP_STEPS.md  README.md  contentrain.json  env.example  mkdocs.yml  netlify.toml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
config/: README.md
contentrain/models/: auto-chat-maker-testmodel.json
docs/: README.md  index.md  test.md
docs/admin/: config.yml  index.html
docs/design/: README.md  architecture.md  azure-ad-auth-spec.md  database-schema.md  er-diagram.md  er-diagram.puml  mcp-integration-spec.md  phase1-5-mcp-integration-design.md  phase1-5-mcp-server-design.md  phase1-class-design.md  phase2-core-functionality-design.md  phase3-data-ui-design.md  system-architecture.md  technical-design.md  webhook-processing-spec.md
docs/design/test-cases/: README.md  integration-test-cases.md  test-case-overview.md  test-case-summary.md  test-coverage-analysis.md  test-implementation-plan.md  unit-test-cases.md
docs/developer-guide/: README.md
docs/images/: .gitkeep
docs/instructions/: code-quality-check.md  contributing.md  decap-cms-setup.md
docs/requirements/: README.md  business-requirements.md  constraints.md  development-plan.md  functional-requirements.md  non-functional-requirements.md  sequence-diagram.md  sequence-diagram.puml  technical-requirements.md  use-case-diagram.md  use-case-diagram.puml  use-case-specifications.md  use-cases.md
docs/schedule/: README.md  development-plan.md  implementation-status-report.md  implemented-files-checklist.md  progress-management.md
docs/specification/: README.md  architecture.md  technical-specification.md
docs/stylesheets/: extra.css
src/auto_chat_maker/: __init__.py  main.py
src/auto_chat_maker/api/middleware/: error_handler.py
src/auto_chat_maker/api/routes/: health.py
src/auto_chat_maker/config/: __init__.py  azure_settings.py  mcp_settings.py  settings.py
src/auto_chat_maker/core/: __init__.py
src/auto_chat_maker/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/config/: test_settings.py
tests/unit/utils/: test_exceptions.py  test_logger.py
(+5 files in other folders)
